--- a/resumee.css
+++ b/resumee.css
@@ -1,12 +1,21 @@
 h3{
-  font: outline;  color: blue;
-
-}
-#basic{
-
+    color:white
 }
 img{
-  border:solid
-blue
-
+    border:solid
+    white
+    
+}
+#text{
+     color: blue;
+}
+#up{
+    margin-left: 800px;
+    margin-top: -450px;
+}
+#top{
+    margin-left: 100px;
+}
+#un{
+    
 }
