--- a/resumee.css
+++ b/resumee.css
@@ -1,21 +1,10 @@
 h3{
-    color:black
+    color:green
 }
 img{
     border:solid
     white
     
 }
-#text{
-     color: blue;
-}
-#up{
-    margin-left: 800px;
-    margin-top: -450px;
-}
-#top{
-    margin-left: 100px;
-}
-#un{
-    
-}
+
+
